Closed Bug 346200 Opened 18 years ago Closed 18 years ago

Spell checker doesn't like curly quotes and other non-ASCII punctuation

Categories

(Core :: Spelling checker, defect)

1.8 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: brettw, Assigned: brettw)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

Spellchecking ‘Geachte collega’ or “reddal chocolawdte” doesn't always work properly. Sometimes the word isn't marked misspelled, sometimes it includes the punctuation.
Attached patch PatchSplinter Review
This patch handles Unicode punctuation.
Attachment #231022 - Flags: review?(bryner)
Attachment #231022 - Flags: review?(bryner) → review+
Checked in to trunk. Leaving open for branch.
Summary: Spell checker doesn't like curly quotes → Spell checker doesn't like curly quotes and other non-ASCII punctuation
Whiteboard: [baking on trunk]
Attachment #231022 - Flags: approval1.8.1?
Whiteboard: [baking on trunk] → [needs approval]
Comment on attachment 231022 [details] [diff] [review]
Patch

approved by schrep for drivers
Attachment #231022 - Flags: approval1.8.1? → approval1.8.1+
Fixed on branch.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: [needs approval]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: