Bug 346200 r=bryner Spellchecker doesn't like curly quotes and other non-ASCII punctuation